# ai-defra-search-knowledge

./: .pre-commit-config.yaml  .trivyignore  Dockerfile  README.md  compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: check-pull-request.yml  publish-changeset.yml  publish-hotfix.yml  publish.yml  scan.yml
.sonarlint/: connectedMode.json
app/: config.py  main.py
app/common/: bedrock.py  http_client.py  mongo.py  postgres.py  security.py  tls.py
app/common/seed_data/: knowledge_vectors.sql
app/document/: models.py  router.py
app/example/: router.py
app/ingest/: __init__.py  s3_client.py  service.py  vector_store.py
app/ingest/extractors/: __init__.py  chunking.py  docx.py  jsonl.py  pdf.py  pptx.py
app/knowledge_group/: models.py  router.py
app/rag/: models.py  router.py  vector_search.py
app/scripts/: load_demo_knowledge_groups.py
changelog/: db.changelog-1.0.xml  db.changelog.xml
compose/: aws.env  start-localstack.sh
migrator/: run-setup.sh
perf-tests/postgres/: init-postgres.sh
scripts/: start_dev_server.sh
tests/: conftest.py
tests/common/: test_bedrock.py  test_http_client.py  test_mongo.py  test_postgres.py
tests/entrypoints/: test_api.py  test_document.py  test_knowledge_group.py  test_rag.py
tests/example/: test_router.py
tests/ingest/: test_s3_client.py  test_service.py  test_vector_store.py
tests/ingest/extractors/: test_docx.py  test_extractors.py  test_pptx.py
tests/rag/: test_vector_search.py
