[project]
name = "ai-defra-search-knowledge"
version = "0.1.0"
description = "ai-defra-search-knowledge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-logger==0.1.0",
    "aws-embedded-metrics==3.3.0",
    # Align with agent: 1.42+ botocore supports AWS_BEARER_TOKEN_BEDROCK for API keys.
    "boto3==1.42.30",
    "dnspython==2.7.0",
    "ecs-logging==2.2.0",
    "fastapi==0.129.0",
    "httpx==0.28.1",
    "pgvector==0.4.1",
    "psycopg[binary,pool]==3.2.10",
    "sqlalchemy[asyncio]==2.0.43",
    "python-docx==1.2.0",
    "python-pptx==0.6.23",
    "pymupdf==1.27.1",
    "pydantic-settings==2.9.1",
    "pymongo[aws,encryption,snappy,zstd]==4.13.1",
    "uvicorn==0.34.3",
]

[dependency-groups]
dev = [
    "debugpy==1.8.17",
    "pre-commit==4.2.0",
    "pytest==8.4.0",
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock==3.15.1",
    "ruff==0.11.13",
    "taskipy==1.14.1",
]

[project.scripts]
ai-defra-search-knowledge = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.coverage.run]
branch = true
include = ["app/*"]
omit = ["tests/*", "app/scripts/load_demo_knowledge_groups.py"]

[tool.coverage.html]
directory = "coverage/coverage_html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.taskipy.tasks]
lint = "uv run ruff format ./app ./tests --check && uv run ruff check ./app ./tests"
test = "uv run task lint && uv run coverage run -m pytest -vv && uv run coverage html && uv run coverage xml"
load-demo-knowledge-groups = "uv run python -m app.scripts.load_demo_knowledge_groups"

[tool.pytest]
minversion = "7.0"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
